# ZCompressor-Qt

./: CMakeLists.txt  README.md
compressor/: CMakeLists.txt  main.cpp
zcompressor/: CMakeLists.txt  zcompressor.cpp  zcompressor.h  zipheader.cpp  zipheader.h  zipwriter.cpp  zipwriter.h
